# metabase-impact

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
metabase_impact/: analyzer.py  cli.py  client.py
